# awman

./: .gitignore  Cargo.toml  Dockerfile.dev  Makefile  README.md
.amux/: Dockerfile.opencode  config.json
.awman/: Dockerfile.antigravity  Dockerfile.claude  Dockerfile.codex  Dockerfile.copilot  Dockerfile.crush  Dockerfile.gemini  Dockerfile.maki  Dockerfile.opencode
.awman/workflows/: 253e0441-0082-Implement Hard Feature Workflow.json  4bc8960b-0086-Implement Hard Feature Workflow.json  56b0fe41-Dependency Upgrade.json  609ffae3-0088-Implement Hard Feature Workflow.json  77134ba4-0085-Implement Hard Feature Workflow.json  7adaf10c-0084-Implement Hard Feature Workflow.json  94bbafef-0079-Implement Hard Feature Workflow.json  a4ed369d-0090-Implement Hard Feature Workflow.json  ad6b53ce-0087-Implement Hard Feature Workflow.json  af4526ae-0080-Implement Hard Feature Workflow.json  debug-issue.toml  e3f432e1-0091-Implement Hard Feature Workflow.json
.cargo/: .global-cache
.cargo-cache/: .global-cache
.claude/: settings.local.json
.claude/skills/security-review/: SKILL.md
.github/workflows/: release.yml  test.yml
aspec/: foundation.md
aspec/architecture/: design.md  four-layer-summary.md
aspec/devops/: architecture-lint.md  cicd.md
aspec/review-notes/: 0073-architecture-audit.md  0073-parity-validation.md
aspec/uxui/: cli.md
aspec/work-items/: 0064-new-subcommand-workflow-and-skill.md  0064-review-notes.md  0065-security-review-hardening.md  0070-grand-architecture-layer-1-2-completion-and-cli.md  0070-grand-architecture-tui-frontend.md  0071-grand-architecture-headless-frontend.md  0072-grand-architecture-finalize-and-remove-oldsrc.md  0072-grand-architecture-headless-frontend.md  0073-grand-architecture-finalize-and-remove-oldsrc.md  0073-grand-architecture-finalize.md  0073-summary.md  0074-mid-step-workflow-control.md  0074-test-new-amux.md  0074-tui-completeness-and-parity.md  0075-skills-overlay.md  0076-deferred-parity-and-e2e-tests.md  0076-porting-old-amux-remote-bound-tab-capability.md  0078-api-frontend-hardening-and-remote-restructure.md  0079-queue-and-worker-execution-system.md  0081-yolo-enhancements.md  0082-overlays-per-workflow-step.md  0083-add-antigravity.md  0084-github-integration-part-1.md  0086-prettysmartdev-awman-14-configurable-project-base-dockerfile.md  0087-ghb15-context-overlay.md  0089-agent-runtime-engine-abstraction.md  0089-ghb16-docker-sandbox-runtime.md  0090-ghb16-docker-sandbox-runtime.md  0091-sbx-layer2-routing.md  new-amux issues.md  new-amux-issues.md
aspec/work-items/completed/: 0066-grand-architecture-foundation-and-layer-0-data.md  0067-grand-architecture-layer-1-engines.md  0068-grand-architecture-layer-2-command-and-dispatch.md  0069-grand-architecture-layer-3-frontends-and-binary.md  0071-grand-architecture-tui-frontend.md  0073-documentation-guide.md
aspec/workflows/: dependency-upgrade-pr.toml  dependency-upgrade.toml  implement-hard.toml  implement-pr.toml
docs/: 00-getting-started.md  01-concepts.md  01-using-the-tui.md  02-agent-sessions.md  02-using-the-tui.md  03-security-and-isolation.md  04-security-and-isolation.md  04-workflows.md  05-yolo-mode.md  07-configuration.md  08-api-mode.md  08-configuration.md  08-headless-mode.md  08-overlays.md  09-api-mode.md  09-remote-mode.md  10-architecture-overview.md  10-remote-mode.md  11-architecture-overview.md  12-github-integration.md  13-context-overlays.md  14-mouse-and-tui-agents.md  15-mouse-and-tui-agents.md  16-runtimes.md  architecture.md  contents.md
docs/blog/: 0008-grand-refactor.md  0009-v080-release.md  0011-v090-release.md
docs/releases/: v0.8.0.md  v0.9.0.md  v0.9.1.md
oldsrc/: README.md
src/: cli.rs  lib.rs  main.rs  passthrough.rs
src/command/: error.rs  mod.rs  queue_worker.rs
src/command/commands/: agent_auth.rs  agent_setup.rs  api_server.rs  auth.rs  chat.rs  claws.rs  command_trait.rs  config.rs  download.rs  exec_prompt.rs  headless.rs  (+15 more)
src/commands/: chat.rs  config.rs  mod.rs  new_cmd.rs  new_skill.rs  new_workflow.rs  parity.rs  spec.rs
src/config/: mod.rs
src/data/: claws_paths.rs  error.rs  execution_event.rs  migration.rs  mod.rs  ready_phase.rs  ready_summary.rs  repo_dockerfile_paths.rs  session.rs  session_manager.rs  session_setup_event.rs  step_status.rs  workflow_dag.rs  workflow_definition.rs  workflow_prompt_template.rs  workflow_state.rs  workflow_state_store.rs
src/engine/: context_prompt.rs  error.rs  mod.rs  step_status.rs
src/frontend/: mod.rs
src/tui/: input.rs  mod.rs  render.rs  state.rs
templates/: Dockerfile.antigravity  sbx-apply.antigravity.sh  sbx-apply.claude.sh  sbx-apply.cline.sh  sbx-apply.codex.sh  sbx-apply.copilot.sh  sbx-apply.crush.sh  sbx-apply.gemini.sh  sbx-apply.maki.sh  sbx-apply.opencode.sh  sbx-kit.antigravity.yaml  sbx-kit.claude.yaml  sbx-kit.cline.yaml  sbx-kit.codex.yaml  sbx-kit.copilot.yaml  sbx-kit.crush.yaml  sbx-kit.gemini.yaml  sbx-kit.maki.yaml  sbx-kit.opencode.yaml
tests/: cli_integration.rs  command_tui_parity.rs  headless_integration.rs  overlays_integration.rs  remote_integration.rs  stuck_yolo_behavior.rs  tui_tabs.rs
tests/api_parity/: live_server.rs  main.rs  rename_0077.rs  routes.rs  wi_0078.rs  wi_0079.rs
tests/binary_smoke/: antigravity_0083.rs  cli_subprocess.rs  context_overlay_0087.rs  headless_no_tty.rs  main.rs  overlay_0082.rs  rename_0077.rs
tests/cli_parity/: catalogue_completeness.rs  json_outputs.rs  main.rs
tests/command/: dispatch_real_engines.rs  main.rs
tests/data_layer/: config_session_roundtrip.rs  issue_e2e.rs  issue_integration.rs  main.rs  rename_0077.rs  sqlite_upgrade_compat.rs
tests/engine/: container_docker.rs  container_io.rs  context_overlay_0087.rs  git_engine.rs  main.rs  overlay_engine.rs  sbx.rs  stuck_event_wiring.rs  workflow_end_to_end.rs  workflow_on_failure.rs
tests/headless_parity/: auth_modes.rs  live_server.rs  main.rs  routes.rs
tests/helpers/: mod.rs
tools/: architecture-lint.sh
(+675 files in other folders)
