[package]
name = "amux"
version = "0.7.0"
edition = "2021"
rust-version = "1.94.0"
description = "A containerized code and claw agent manager"

[[bin]]
name = "amux"
path = "src/main.rs"

[dependencies]
anyhow = "1"
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
dirs = "6"
portable-pty = "0.9"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strip-ansi-escapes = "0.2"
strsim = "0.11"
tempfile = "3"
vt100 = "0.15"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"], default-features = false }
tokio-stream = "0.1"
unicode-width = "0.2"
flate2 = "1"
tar = "0.4"
sha2 = "0.10"
arboard = "3"
shell-words = "1"
toml = "0.8"
serde_yaml = "0.9"
axum = "0.7"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tower-http = { version = "0.5", features = ["trace"] }
chrono = { version = "0.4", features = ["serde"] }
ring = "0.17"
subtle = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }

[[bench]]
name = "performance"
harness = false
